Started on printing

--- a/WPF/WPF_UserControls/WPF_UserControls.csproj
+++ b/WPF/WPF_UserControls/WPF_UserControls.csproj
@@ -51,6 +51,9 @@
     <Compile Include="Customer.xaml.cs">
       <DependentUpon>Customer.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Printing\LoanConfirmation.xaml.cs">
+      <DependentUpon>LoanConfirmation.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -81,6 +84,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Printing\LoanConfirmation.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="User.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -90,6 +97,10 @@
     <ProjectReference Include="..\..\Model\Models\Models.csproj">
       <Project>{9c96e0f5-273a-4537-a58b-80be881609f7}</Project>
       <Name>Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\ViewModel\ViewModel.csproj">
+      <Project>{b80a50db-8a56-40ed-8feb-2ea154243eb2}</Project>
+      <Name>ViewModel</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
