--- a/WPF/WPF_UserControls/WPF_UserControls.csproj
+++ b/WPF/WPF_UserControls/WPF_UserControls.csproj
@@ -98,8 +98,8 @@
       <Project>{9c96e0f5-273a-4537-a58b-80be881609f7}</Project>
       <Name>Models</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\ViewModel\ViewModel.csproj">
-      <Project>{b80a50db-8a56-40ed-8feb-2ea154243eb2}</Project>
+    <ProjectReference Include="..\..\ViewModels\ViewModel\ViewModel.csproj">
+      <Project>{9147e4e1-87d8-42bb-8281-f8e2c9d5a5fa}</Project>
       <Name>ViewModel</Name>
     </ProjectReference>
   </ItemGroup>
