--- a/ViewModels/ViewModel/ViewModel.csproj
+++ b/ViewModels/ViewModel/ViewModel.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="BaseViewModel.cs" />
     <Compile Include="Commands\RelayCommand.cs" />
+    <Compile Include="LargeDataViewModel.cs" />
     <Compile Include="LoanConfirmationViewModel.cs" />
     <Compile Include="MainViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
