--- a/ViewModels/ViewModel/ViewModel.csproj
+++ b/ViewModels/ViewModel/ViewModel.csproj
@@ -43,10 +43,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseViewModel.cs" />
+    <Compile Include="ClientCreditReportViewModel.cs" />
     <Compile Include="Commands\RelayCommand.cs" />
     <Compile Include="LoanConfirmationViewModel.cs" />
     <Compile Include="MainViewModel.cs" />
+    <Compile Include="ParentViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Model\Models\Models.csproj">
