--- a/WPF/WPF/packages.config
+++ b/WPF/WPF/packages.config
@@ -31,5 +31,6 @@
   <package id="System.Memory" version="4.5.3" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
-  <package id="Unity" version="5.11.10" targetFramework="net472" />
+  <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net472" />
+  <package id="Unity" version="5.11.10" targetFramework="net472" requireReinstallation="true" />
 </packages>
