--- a/WPF/WPF_UserControls/packages.config
+++ b/WPF/WPF_UserControls/packages.config
@@ -3,5 +3,5 @@
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.31" targetFramework="net472" />
   <package id="System.Linq" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
-  <package id="Unity" version="5.11.10" targetFramework="net472" />
+  <package id="Unity" version="5.11.10" targetFramework="net472" requireReinstallation="true" />
 </packages>
