--- a/ViewModels/ViewModel/packages.config
+++ b/ViewModels/ViewModel/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="System.Linq" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
-  <package id="Unity" version="5.11.10" targetFramework="net472" />
+  <package id="Unity" version="5.11.10" targetFramework="net472" requireReinstallation="true" />
 </packages>
